# visual-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: lint.yaml
sandbox/: cookiecutter.json
sandbox/hooks/: post_gen_project.py
sandbox/{{cookiecutter.folder_name}}/: {{cookiecutter.file_name}}.txt
viz_cookiecutter/: __main__.py  cli.py  core.py  gui.py
